tests/machine/x/cpp/count_builtin.mochi.error
line 5: ../../../tests/machine/x/cpp/count_builtin.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/count_builtin.mochi.cpp:5:23: error: no matching function for call to ‘count(std::vector<int>)’
    5 |         (cout << count(vector<int>{1, 2, 3}));
      |                  ~~~~~^~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/algorithm:61,
                 from /usr/include/x86_64-linux-gnu/c++/13/bits/stdc++.h:51,
                 from ../../../tests/machine/x/cpp/count_builtin.mochi.cpp:1:
/usr/include/c++/13/bits/stl_algo.h:4072:5: note: candidate: ‘template<class _IIter, class _Tp> typename std::iterator_traits< <template-parameter-1-1> >::difference_type std::count(_IIter, _IIter, const _Tp&)’
 4072 |     count(_InputIterator __first, _InputIterator __last, const _Tp& __value)
      |     ^~~~~
/usr/include/c++/13/bits/stl_algo.h:4072:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/count_builtin.mochi.cpp:5:23: note:   candidate expects 3 arguments, 1 provided
    5 |         (cout << count(vector<int>{1, 2, 3}));
      |                  ~~~~~^~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/algorithm:73:
/usr/include/c++/13/pstl/glue_algorithm_defs.h:101:1: note: candidate: ‘template<class _ExecutionPolicy, class _ForwardIterator, class _Tp> __pstl::__internal::__enable_if_execution_policy<_ExecutionPolicy, typename std::iterator_traits<_II>::difference_type> std::count(_ExecutionPolicy&&, _ForwardIterator, _ForwardIterator, const _Tp&)’
  101 | count(_ExecutionPolicy&& __exec, _ForwardIterator __first, _ForwardIterator __last, const _Tp& __value);
      | ^~~~~
/usr/include/c++/13/pstl/glue_algorithm_defs.h:101:1: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/count_builtin.mochi.cpp:5:23: note:   candidate expects 4 arguments, 1 provided
    5 |         (cout << count(vector<int>{1, 2, 3}));
      |                  ~~~~~^~~~~~~~~~~~~~~~~~~~~~

  4 | int main() {
  5 | 	(cout << count(vector<int>{1, 2, 3}));
  6 | 	return 0;
